# TeuM

./: .gitignore  ANDROID-PLAY-STORE-DEPLOYMENT.md  BACKUP-AND-FUTURE-SYNC.md  DEV-ANDROID-ADB-WORKFLOW.md  PIXEL-DESK-GAMIFICATION-SPEC.md  PLAY-STORE-LISTING-COPY.md  PRIVACY-POLICY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  teum-service-and-screen-spec.md
android/: App.tsx  RELEASE-NOTES-1.0.3.md  RELEASE-NOTES-1.0.4.md  app.json  package.json
android/android/: keystore.properties.example  settings.gradle
android/android/app/: build.gradle
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/res/drawable/: ic_stat_teum.xml  ic_teum_chevron_left.xml  ic_teum_chevron_right.xml
android/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/android/app/src/main/res/values-en/: strings.xml
android/android/app/src/main/res/values-ko/: strings.xml
android/assets/: LUCIDE-NOTICE.md
android/src/: i18n.tsx  theme.ts  types.ts
android/src/components/: TimePickerSheet.tsx  ui.tsx
android/src/lib/: backup.ts  notifications.ts  records.ts  storage.ts  time.ts
android/src/pixel/: PixelGlyph.tsx  PixelScene.tsx  PixelSlotMeter.tsx  catalog.ts  deskState.ts
android/src/screens/: Break.tsx  Desk.tsx  Home.tsx  Onboarding.tsx  Records.tsx  Settings.tsx
android/tests/: time.test.mjs
opensource/: README.md
windows/: index.html  package.json  vite.config.ts
windows/src/: App.tsx  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: lib.rs  main.rs
(+10 files in other folders)
