[package]
name = "teum"
version = "0.1.0"
description = "A small pause that keeps your flow moving"
authors = ["TeuM"]
edition = "2021"

[lib]
name = "teum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"

